Fixed some spacing and css stuff

--- a/frontend/style/style.css
+++ b/frontend/style/style.css
@@ -116,6 +116,7 @@ html {
 
 .login-page {
     width: 30%;
+    max-width: 300px;
     background-color: lightgray;
     display: flex;
     flex-direction: column;
@@ -136,12 +137,15 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding: 3rem;
-    gap: 3rem;
+    padding: 0rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    gap: 4rem;
 }
 
 .about-page {
     width: 75%;
+    max-width: 600px;
     background-color: lightgray;
     display: flex;
     flex-direction: column;
@@ -161,6 +165,7 @@ html {
 }
 
 .about-page img {
-    width: 70%;
+    width: 75%;
+    max-width: 400px;
     height: auto;
 }
