--- a/frontend/style/todo.css
+++ b/frontend/style/todo.css
@@ -86,7 +86,7 @@
 
 .task {
     text-align: left;
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: white;
     margin-left: 8%;
     margin-right: 8%;
